# python-otcextensions

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stestr.blacklist.functional  .stestr.conf  .testr.conf  .travis.yml  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  Dockerfile  README-save  README.rst  bindep.txt  open_points  requirements.txt  ruff.toml  setup.cfg  test-requirements.txt  test.py  test2.py  tox.ini
doc/: requirements.txt  rtfd_requirements.txt
doc/source/: conf.py  coverage.rst  demo.rst-delme  enforcer.py  glossary.rst  history.rst  index.rst  releasenotes.rst  save
examples/: connect.py  connect_otc.py
examples/anti_ddos/: get_floating_ip_policies.py  get_floating_ip_status.py  list_configs.py  list_floating_ip_events.py  list_floating_ip_stat_day.py  list_floating_ip_stat_week.py  list_floating_ips.py  protect_floating_ip.py  unprotect_floating_ip.py  update_floating_ip_policies.py
examples/apig/: add_or_update_backend_server_group.py  add_or_update_backend_servers.py  authorize_apps.py  bind_acl_to_api.py  bind_certificates_for_domain.py  bind_domain_name.py  bind_domain_to_cert.py  bind_eip.py  bind_signature.py  bind_throttling_policy.py  cancel_authorization.py  check_api.py  configure_gw_feature.py  create_ac_policy.py  create_acl_policy.py  create_api.py  create_api_group.py  create_app.py  create_app_code.py  create_certificate_for_domain.py  create_custom_authorizer.py  create_env.py  create_env_variable.py  create_gateway.py  create_group_response.py  create_signature.py  create_ssl_cert.py  create_throttling_exclude.py  create_throttling_policy.py  create_vpc_channel.py  debug_api.py  delete_ac_policies.py  delete_ac_policy.py  delete_acl_policies.py  delete_acl_policy.py  delete_api.py  delete_api_group.py  delete_app.py  delete_app_code.py  delete_backend_server_group.py  (+132 more)
examples/auto_scaling/: batch_delete_config.py  batch_instance_action.py  create_config.py  create_group.py  create_policy.py  delete_config.py  delete_group.py  delete_policy.py  execute_policy.py  find_config.py  find_group.py  find_policy.py  get_config.py  get_group.py  get_policy.py  list_activities.py  list_configs.py  list_groups.py  list_instances.py  list_policies.py  list_quotas.py  pause_group.py  pause_policy.py  remove_instance.py  resume_group.py  resume_policy.py  update_policy.py
examples/baremetal/: provisioning.py
examples/cbr/: add_member.py  associate_resources.py  bind_policy.py  create_checkpoint.py  create_policy.py  create_vault.py  delete_backup.py  delete_member.py  delete_policy.py  delete_vault.py  dissociate_resources.py  find_backup.py  find_policy.py  find_vault.py  get_backup.py  get_checkpoint.py  get_member.py  get_policy.py  get_task.py  get_vault.py  list_backups.py  list_members.py  list_policies.py  list_tasks.py  list_vaults.py  restore_data.py  unbind_policy.py  update_member.py  update_policy.py  update_vault.py
examples/cce/: create_cluster.py  create_cluster_node.py  create_cluster_node_cloud_layer.py  create_node_pool.py  create_node_pool_cloud_layer.py  create_turbo_cluster.py  delete_cluster.py  delete_cluster_node.py  delete_cluster_node_cloud_layer.py  delete_node_pool.py  delete_node_pool_cloud_layer.py  find_cluster.py  find_cluster_node.py  find_node_pool.py  get_cluster.py  get_cluster_node.py  get_job.py  get_node_pool.py  list_cluster_nodes.py  list_clusters.py  list_node_pools.py  wait_for_job.py
examples/ces/: create_alarm.py  create_metric_data.py  delete_alarm.py  find_alarm.py  get_alarm.py  list_alarms.py  list_event_data.py  list_metric_data.py  list_metrics.py  list_quotas.py  switch_alarm_state.py
examples/cloud/: cleanup-servers.py  create-server-dict.py  create-server-name-or-id.py  debug-logging.py  find-an-image.py  http-debug-logging.py  munch-dict-object.py  normalization.py  server-information.py  service-conditional-overrides.py  service-conditionals.py  strict-mode.py  upload-large-object.py  user-agent.py
examples/clustering/: action.py  cluster.py  event.py  node.py  policy.py  policy_type.py  profile.py  profile_type.py  receiver.py
examples/compute/: create.py
examples/css/: add_cluster_nodes.py  create_cluster.py  create_cluster_opensearch.py  create_snapshot.py  delete_cluster.py  delete_snapshot.py  disable_snapshot_function.py  extend_cluster.py  extend_cluster_nodes.py  find_cluster.py  find_snapshot.py  get_certificate.py  get_cluster.py  get_cluster_upgrade_info.py  get_cluster_upgrade_status.py  get_cluster_version_upgrade_info.py  get_snapshot_policy.py  list_cluster_upgradable_versions.py  list_clusters.py  list_flavors.py  list_snapshots.py  replace_cluster_node.py  restart_cluster.py  restore_snapshot.py  retry_cluster_upgrade_job.py  scale_in_cluster.py  scale_in_cluster_by_node_type.py  set_snapshot_configuration.py  set_snapshot_policy.py  update_cluster_flavor.py  update_cluster_kernel.py  update_cluster_name.py  update_cluster_password.py  update_cluster_security_group.py  update_cluster_security_mode.py  update_node_type_flavor.py
examples/cts/: create_tracker.py  delete_tracker.py  get_tracker.py  list_traces.py  update_tracker.py
examples/ctsv3/: create_key_event.py  create_tracker.py  delete_key_event.py  delete_tracker.py  list_key_events.py  list_quotas.py  list_traces.py  list_trackers.py  update_key_event.py
examples/dcaas/: create_connection.py  create_endpoint_group.py  create_virtual_gateway.py  create_virtual_interface.py  delete_connection.py  delete_endpoint_group.py  delete_virtual_gateway.py  delete_virtual_interface.py  find_connection.py  find_endpoint_group.py  find_virtual_gateway.py  find_virtual_interface.py  get_connection.py  get_endpoint_group.py  get_virtual_gateway.py  get_virtual_interface.py  list_connections.py  list_endpoint_groups.py  list_virtual_gateways.py  list_virtual_interfaces.py  update_connection.py  update_endpoint_group.py  update_virtual_gateway.py  update_virtual_interface.py
examples/dcs/: change_instance_password.py  (+22 more)
otcextensions/: __init__.py  i18n.py
spec/: python-otcextensions.spec
(+2644 files in other folders)
