[metadata]
name = otcextensions
summary = OpenStack Command-line Client and SDK Extensions for OpenTelekomCloud
description-file =
    README.rst
author = Artem Goncharov
author-email = artem.goncharov@gmail.com
home-page = http://python-otcextensions.readthedocs.io/en/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords =
    OpenStack, openstackclient, openstacksdk, OpenTelekomCloud, otc, t-systems, telekom

[files]
packages =
  otcextensions

[entry_points]
openstack.cli.extension =
  obs = otcextensions.osclient.obs.client
  rds = otcextensions.osclient.rds.client
  auto_scaling = otcextensions.osclient.auto_scaling.client
  kms = otcextensions.osclient.kms.client
  cce = otcextensions.osclient.cce.client
  load_balancer = otcextensions.osclient.load_balancer.client
  volume_backup = otcextensions.osclient.volume_backup.client
  dms = otcextensions.osclient.dms.client
  dcs = otcextensions.osclient.dcs.client
  cts = otcextensions.osclient.cts.client
  anti_ddos = otcextensions.osclient.anti_ddos.client
  dns = otcextensions.osclient.dns.client
  deh = otcextensions.osclient.deh.client
  mrs = otcextensions.osclient.mrs.client

#openstack.obs.v1 =
#  s3_ls = otcextensions.osclient.obs.v1.ls:List
#  s3_cp = otcextensions.osclient.obs.v1.cp:Copy

openstack.obs.v1 =
    obs_container_create = otcextensions.osclient.obs.v1.container:CreateContainer
    obs_container_delete = otcextensions.osclient.obs.v1.container:DeleteContainer
    obs_container_list = otcextensions.osclient.obs.v1.container:ListContainer
#    container_save = otcextensions.osclient.obs.v1.container:SaveContainer
#    container_set = otcextensions.osclient.obs.v1.container:SetContainer
    obs_container_show = otcextensions.osclient.obs.v1.container:ShowContainer
#    container_unset = otcextensions.osclient.obs.v1.container:UnsetContainer
    obs_object_create = otcextensions.osclient.obs.v1.object:CreateObject
    obs_object_delete = otcextensions.osclient.obs.v1.object:DeleteObject
    obs_object_list = otcextensions.osclient.obs.v1.object:ListObject
    obs_object_save = otcextensions.osclient.obs.v1.object:SaveObject
#    obs_object_set = otcextensions.osclient.obs.v1.object:SetObject
    obs_object_show = otcextensions.osclient.obs.v1.object:ShowObject
#    obs_object_unset = otcextensions.osclient.obs.v1.object:UnsetObject


openstack.rds.v1 =
  rds_flavor_list = otcextensions.osclient.rds.v1.flavor:ListDatabaseFlavors
  rds_flavor_show = otcextensions.osclient.rds.v1.flavor:ShowDatabaseFlavor
  rds_datastore_list = otcextensions.osclient.rds.v1.datastore:ListDatastores
  rds_datastore_show = otcextensions.osclient.rds.v1.datastore:ShowDatastore
  rds_datastore_version_list = otcextensions.osclient.rds.v1.datastore:ListDatastoreVersions
  rds_datastore_version_show = otcextensions.osclient.rds.v1.datastore:ShowDatastoreVersion
  #  rds_configuration_list = otcextensions.osclient.rds.v1.configuration:ListConfigurations
  #  rds_configuration_show = otcextensions.osclient.rds.v1.configuration:ShowConfiguration
  #  rds configuration_parameter_list = otcextensions.osclient.rds.v1.configuration:ListDatabaseConfigurationParameters
  #  rds configuration_parameter_show = otcextensions.osclient.rds.v1.configuration:ShowDatabaseConfigurationParameter
  #  rds_configuration_create = otcextensions.osclient.rds.v1.configuration:CreateConfiguration
  #  rds_configuration_delete = otcextensions.osclient.rds.v1.configuration:DeleteConfiguration
  #  rds_configuration_set = otcextensions.osclient.rds.v1.configuration:SetConfiguration
  #  rds_instance_create_from_backup = otcextensions.osclient.rds.v1.instance:CreateInstanceFromBackup
  #  rds_instance_reset_status = otcextensions.osclient.rds.v1.instance:ResetDatabaseInstanceStatus
  #  rds_instance_resize_flavor = otcextensions.osclient.rds.v1.instance:ResizeDatabaseInstanceFlavor
  #  rds_instance_resize_volume = otcextensions.osclient.rds.v1.instance:ResizeDatabaseInstanceVolume
  #  rds_instance_update = otcextensions.osclient.rds.v1.instance:UpdateDatabaseInstance
  #  rds_instance_upgrade = otcextensions.osclient.rds.v1.instance:UpgradeDatabaseInstance
  rds_instance_list = otcextensions.osclient.rds.v1.instance:ListDatabaseInstances
  rds_instance_show = otcextensions.osclient.rds.v1.instance:ShowDatabaseInstance
  rds_instance_create = otcextensions.osclient.rds.v1.instance:CreateDatabaseInstance
  rds_instance_delete = otcextensions.osclient.rds.v1.instance:DeleteDatabaseInstance
  rds_instance_restart = otcextensions.osclient.rds.v1.instance:RestartDatabaseInstance
  rds_instance_restore = otcextensions.osclient.rds.v1.instance:RestoreDatabaseInstance
  rds_backup_list = otcextensions.osclient.rds.v1.backup:ListBackup
  rds_backup_create = otcextensions.osclient.rds.v1.backup:CreateBackup
  rds_backup_delete = otcextensions.osclient.rds.v1.backup:DeleteBackup

openstack.auto_scaling.v1 =
  as_group_list = otcextensions.osclient.auto_scaling.v1.group:ListAutoScalingGroup
  as_group_show = otcextensions.osclient.auto_scaling.v1.group:ShowAutoScalingGroup
  as_group_create = otcextensions.osclient.auto_scaling.v1.group:CreateAutoScalingGroup
  as_group_delete = otcextensions.osclient.auto_scaling.v1.group:DeleteAutoScalingGroup
  as_group_update = otcextensions.osclient.auto_scaling.v1.group:UpdateAutoScalingGroup
  as_group_disable = otcextensions.osclient.auto_scaling.v1.group:DisableAutoScalingGroup
  as_group_enable = otcextensions.osclient.auto_scaling.v1.group:EnableAutoScalingGroup
  as_config_list = otcextensions.osclient.auto_scaling.v1.config:ListAutoScalingConfig
  as_config_show = otcextensions.osclient.auto_scaling.v1.config:ShowAutoScalingConfig
  as_config_create = otcextensions.osclient.auto_scaling.v1.config:CreateAutoScalingConfig
  as_config_delete = otcextensions.osclient.auto_scaling.v1.config:DeleteAutoScalingConfig
  as_policy_list = otcextensions.osclient.auto_scaling.v1.policy:ListAutoScalingPolicy
  as_policy_show = otcextensions.osclient.auto_scaling.v1.policy:ShowAutoScalingPolicy
  as_policy_create = otcextensions.osclient.auto_scaling.v1.policy:CreateAutoScalingPolicy
  as_policy_update = otcextensions.osclient.auto_scaling.v1.policy:UpdateAutoScalingPolicy
  as_policy_execute = otcextensions.osclient.auto_scaling.v1.policy:ExecuteAutoScalingPolicy
  as_policy_enable = otcextensions.osclient.auto_scaling.v1.policy:EnableAutoScalingPolicy
  as_policy_disable = otcextensions.osclient.auto_scaling.v1.policy:DisableAutoScalingPolicy
  as_instance_list = otcextensions.osclient.auto_scaling.v1.instance:ListAutoScalingInstance
  as_instance_remove = otcextensions.osclient.auto_scaling.v1.instance:RemoveAutoScalingInstance
  as_instance_batch = otcextensions.osclient.auto_scaling.v1.instance:BatchActionAutoScalingInstance
  as_quota_list = otcextensions.osclient.auto_scaling.v1.quota:ListAutoScalingQuota
  as_activity_list = otcextensions.osclient.auto_scaling.v1.activity:ListAutoScalingActivityLogs

openstack.dms.v1 =
  dms_queue_list = otcextensions.osclient.dms.v1.queue:ListDMSQueue
  dms_queue_show = otcextensions.osclient.dms.v1.queue:ShowDMSQueue
  dms_queue_delete = otcextensions.osclient.dms.v1.queue:DeleteDMSQueue
  dms_queue_create = otcextensions.osclient.dms.v1.queue:CreateDMSQueue
  dms_group_list = otcextensions.osclient.dms.v1.group:ListGroup
  dms_group_delete = otcextensions.osclient.dms.v1.group:DeleteGroup
  dms_group_create = otcextensions.osclient.dms.v1.group:CreateGroup
  dms_quota_list = otcextensions.osclient.dms.v1.quota:ListQuota

openstack.dcs.v1 =
  dcs_instance_list = otcextensions.osclient.dcs.v1.instance:ListInstance
  dcs_instance_show = otcextensions.osclient.dcs.v1.instance:ShowInstance
  dcs_instance_delete = otcextensions.osclient.dcs.v1.instance:DeleteInstance
  dcs_instance_create = otcextensions.osclient.dcs.v1.instance:CreateInstance
  dcs_instance_set = otcextensions.osclient.dcs.v1.instance:SetInstance
  dcs_instance_extend = otcextensions.osclient.dcs.v1.instance:ExtendInstance
  dcs_instance_stop = otcextensions.osclient.dcs.v1.instance:StopInstance
  dcs_instance_start = otcextensions.osclient.dcs.v1.instance:StartInstance
  dcs_instance_restart = otcextensions.osclient.dcs.v1.instance:RestartInstance
  dcs_instance_changepwd = otcextensions.osclient.dcs.v1.instance:ChangePasswordInstance
  dcs_instance_backup_list = otcextensions.osclient.dcs.v1.backup:ListBackup
  dcs_instance_backup_create = otcextensions.osclient.dcs.v1.backup:CreateBackup
  dcs_instance_backup_delete = otcextensions.osclient.dcs.v1.backup:DeleteBackup
  dcs_instance_backup_restore = otcextensions.osclient.dcs.v1.restore:RestoreBackup
  dcs_instance_restore_list = otcextensions.osclient.dcs.v1.restore:ListRestoreRecords
  dcs_instance_params_list = otcextensions.osclient.dcs.v1.config:ListInstanceParam
  dcs_instance_params_show = otcextensions.osclient.dcs.v1.config:ShowInstanceParam
  dcs_instance_params_update = otcextensions.osclient.dcs.v1.config:UpdateInstanceParam
  dcs_stat_list = otcextensions.osclient.dcs.v1.statistic:ListStatistic

openstack.kms.v1 =
  kms_cmk_list = otcextensions.osclient.kms.v1.cmk:ListCMK
  kms_cmk_show = otcextensions.osclient.kms.v1.cmk:ShowCMK
  kms_cmk_enable = otcextensions.osclient.kms.v1.cmk:EnableCMK
  kms_cmk_disable = otcextensions.osclient.kms.v1.cmk:DisableCMK
  kms_cmk_delete = otcextensions.osclient.kms.v1.cmk:DeleteCMK
  kms_cmk_cancel_delete = otcextensions.osclient.kms.v1.cmk:CancelDeleteCMK

openstack.cce.v1 =
  cce_cluster_list = otcextensions.osclient.cce.v1.cluster:ListCCECluster
  cce_cluster_show = otcextensions.osclient.cce.v1.cluster:ShowCCECluster
  cce_cluster_create = otcextensions.osclient.cce.v1.cluster:CreateCCECluster
  cce_cluster_delete = otcextensions.osclient.cce.v1.cluster:DeleteCCECluster
  cce_cluster_node_list = otcextensions.osclient.cce.v1.cluster_node:ListCCEClusterNode
  cce_cluster_node_show = otcextensions.osclient.cce.v1.cluster_node:ShowCCEClusterNode
  cce_cluster_node_create = otcextensions.osclient.cce.v1.cluster_node:CreateCCEClusterNode
  cce_cluster_node_delete = otcextensions.osclient.cce.v1.cluster_node:DeleteCCEClusterNode

openstack.load_balancer.v1 =
  loadbalancer_list = otcextensions.osclient.load_balancer.v1.load_balancer:ListLoadBalancer
  loadbalancer_show = otcextensions.osclient.load_balancer.v1.load_balancer:ShowLoadBalancer
  loadbalancer_create = otcextensions.osclient.load_balancer.v1.load_balancer:CreateLoadBalancer
  loadbalancer_set = otcextensions.osclient.load_balancer.v1.load_balancer:SetLoadBalancer
  loadbalancer_delete = otcextensions.osclient.load_balancer.v1.load_balancer:DeleteLoadBalancer
  loadbalancer_listener_list = otcextensions.osclient.load_balancer.v1.listener:ListListener
  loadbalancer_listener_show = otcextensions.osclient.load_balancer.v1.listener:ShowListener
  loadbalancer_listener_create = otcextensions.osclient.load_balancer.v1.listener:CreateListener
  loadbalancer_listener_set = otcextensions.osclient.load_balancer.v1.listener:SetListener
  loadbalancer_listener_delete = otcextensions.osclient.load_balancer.v1.listener:DeleteListener
  loadbalancer_pool_list = otcextensions.osclient.load_balancer.v1.pool:ListPool
  loadbalancer_pool_show = otcextensions.osclient.load_balancer.v1.pool:ShowPool
  loadbalancer_pool_create = otcextensions.osclient.load_balancer.v1.pool:CreatePool
  loadbalancer_pool_set = otcextensions.osclient.load_balancer.v1.pool:SetPool
  loadbalancer_pool_delete = otcextensions.osclient.load_balancer.v1.pool:DeletePool
  loadbalancer_member_list = otcextensions.osclient.load_balancer.v1.pool_member:ListPoolMember
  loadbalancer_member_show = otcextensions.osclient.load_balancer.v1.pool_member:ShowPoolMember
  loadbalancer_member_create = otcextensions.osclient.load_balancer.v1.pool_member:CreatePoolMember
  loadbalancer_member_set = otcextensions.osclient.load_balancer.v1.pool_member:SetPoolMember
  loadbalancer_member_delete = otcextensions.osclient.load_balancer.v1.pool_member:DeletePoolMember
  loadbalancer_healthmonitor_list = otcextensions.osclient.load_balancer.v1.health_monitor:ListHealthMonitor
  loadbalancer_healthmonitor_show = otcextensions.osclient.load_balancer.v1.health_monitor:ShowHealthMonitor
  loadbalancer_healthmonitor_create = otcextensions.osclient.load_balancer.v1.health_monitor:CreateHealthMonitor
  loadbalancer_healthmonitor_set = otcextensions.osclient.load_balancer.v1.health_monitor:SetHealthMonitor
  loadbalancer_healthmonitor_delete = otcextensions.osclient.load_balancer.v1.health_monitor:DeleteHealthMonitor

openstack.volume_backup.v2 =
  vbs_policy_list = otcextensions.osclient.volume_backup.v2.policy:ListVolumeBackupPolicy
  vbs_policy_show = otcextensions.osclient.volume_backup.v2.policy:ShowVolumeBackupPolicy
  vbs_policy_create = otcextensions.osclient.volume_backup.v2.policy:CreateVolumeBackupPolicy
  vbs_policy_update = otcextensions.osclient.volume_backup.v2.policy:UpdateVolumeBackupPolicy
  vbs_policy_delete = otcextensions.osclient.volume_backup.v2.policy:DeleteVolumeBackupPolicy
  vbs_policy_execute = otcextensions.osclient.volume_backup.v2.policy:ExecuteVolumeBackupPolicy
  vbs_policy_link = otcextensions.osclient.volume_backup.v2.policy:LinkResourceToVolumeBackupPolicy
  vbs_policy_unlink = otcextensions.osclient.volume_backup.v2.policy:UnlinkResourceFromVolumeBackupPolicy

openstack.cts.v1 =
  cts_trace_list = otcextensions.osclient.cts.v1.trace:ListTrace
  cts_tracker_show = otcextensions.osclient.cts.v1.tracker:ShowTracker
  cts_tracker_create = otcextensions.osclient.cts.v1.tracker:CreateTracker
  cts_tracker_set = otcextensions.osclient.cts.v1.tracker:SetTracker
  cts_tracker_delete = otcextensions.osclient.cts.v1.tracker:DeleteTracker

openstack.anti_ddos.v1 =
  antiddos_config_list = otcextensions.osclient.anti_ddos.v1.config:ListConfig
  antiddos_floatip_list = otcextensions.osclient.anti_ddos.v1.floating_ip:ListFloatingIP
  antiddos_floatip_show = otcextensions.osclient.anti_ddos.v1.floating_ip:ShowFloatingIP
  antiddos_floatip_events = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPEvents
  antiddos_floatip_stat_day = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPStatDay
  antiddos_floatip_stat_week = otcextensions.osclient.anti_ddos.v1.status:ListFloatingIPStatWeek

openstack.dns.v2 =
  dns_zone_list = otcextensions.osclient.dns.v2.zone:ListZone
  dns_zone_show = otcextensions.osclient.dns.v2.zone:ShowZone
  dns_zone_create = otcextensions.osclient.dns.v2.zone:CreateZone
  dns_zone_set = otcextensions.osclient.dns.v2.zone:SetZone
  dns_zone_delete = otcextensions.osclient.dns.v2.zone:DeleteZone
  dns_zone_router_add = otcextensions.osclient.dns.v2.zone:AssociateRouterToZone
  dns_zone_router_remove = otcextensions.osclient.dns.v2.zone:DisassociateRouterToZone
  dns_zone_nameserver_list = otcextensions.osclient.dns.v2.zone:ListNameserver
  dns_recordset_list = otcextensions.osclient.dns.v2.recordset:ListRS
  dns_recordset_show = otcextensions.osclient.dns.v2.recordset:ShowRS
  dns_recordset_create = otcextensions.osclient.dns.v2.recordset:CreateRS
  dns_recordset_set = otcextensions.osclient.dns.v2.recordset:SetRS
  dns_recordset_delete = otcextensions.osclient.dns.v2.recordset:DeleteRS
  dns_ptr_list = otcextensions.osclient.dns.v2.ptr:ListPTR
  dns_ptr_show = otcextensions.osclient.dns.v2.ptr:ShowPTR
  dns_ptr_set = otcextensions.osclient.dns.v2.ptr:SetPTR
  dns_ptr_delete = otcextensions.osclient.dns.v2.ptr:DeletePTR

openstack.deh.v1 =
  deh_host_list = otcextensions.osclient.deh.v1.host:ListHost
  deh_host_show = otcextensions.osclient.deh.v1.host:ShowHost
  deh_host_create = otcextensions.osclient.deh.v1.host:CreateHost
  deh_host_set = otcextensions.osclient.deh.v1.host:SetHost
  deh_host_delete = otcextensions.osclient.deh.v1.host:DeleteHost
  deh_host_type_list = otcextensions.osclient.deh.v1.host:ListHostType
  deh_server_list = otcextensions.osclient.deh.v1.host:ListServer

openstack.mrs.v1 =
  mrs_cluster_list = otcextensions.osclient.mrs.v1.cluster:ListCluster
  mrs_cluster_show = otcextensions.osclient.mrs.v1.cluster:ShowCluster
  mrs_cluster_delete = otcextensions.osclient.mrs.v1.cluster:DeleteCluster
[pbr]
api_doc_dir = contributor/api
setup-hooks = pbr.hooks.setup_hook
warnerrors = True

[build_sphinx]
builders = html,man
all-files = 1
warning-is-error = 0
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = otcextensions/locale/otcextensions.pot

[update_catalog]
domain = openstackclient
output_dir = otcextensions/locale
input_file = otcextensions/locale/otcextensions.pot

[compile_catalog]
directory = otcextensions/locale
domain = otcextensions
